apps/minha-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minha-app-service
  labels:
    app: minha-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: minha-app
